 - Merge Debian/Ubuntu chroot scripts and add minor fixes.
 - Drop CHROOT_SCRIPT setting, use hardcoded chroot-startstop.sh.
 - Fix float compare script output and relative checking.
 - Fix various small bugs in problem ZIP import
 - [security] Disable GCC family automatic language detection to
   prevent submitting other languages or object/executable code.
 - Various smaller fixes and improvements to the jury interface.

Version 5.0.0 - 11 August 2015
------------------------------
 - Removed support for 'presentation-error' judgement.
 - Various documentation improvements.
 - Preserve aspect ratio when creating testcase image thumbnails.
 - Fixed bug that REST API scoreboard "solved" was always true.
   Thanks Shuhei Takahashi.
 - Make REST API return properly typed values. Thanks Shuhei Takahashi.
 - Synchronise selected contest between jury/team/public interfaces.
 - By default only refresh caches of the selected contest.
 - Show differences of a resubmission with the original submission.
 - Fix length of role DB field. Thanks pinkston3 for pointing out.
 - Update ACE editor to version 1.2.0.
 - Update jQuery to version 2.1.4.
 - Update autoconf M4 macros from upstream.
 - Miscellaneous smaller fixes.

Version 5.0.0 Release Candidate 1 - 7 July 2015
-----------------------------------------------
 - Add support for the problemarchive.org problem package format, thereby
   dropping support for our custom format. In particular, the specification
   of compare scripts has changed.
 - Add support for multiple simultaneous contests.
 - Add support for HTML5 desktop notifications of clarifications,
   judgings and judgehost status (#133).
 - Add support for optional user self-registration.
 - Add support for problem points, allowing one to assign different
   scoring weights to diffent problems in a contest.
 - Add selection options for rejudging, and preview rejudging results
   before applying them.
 - Add optional per problem memory/output limits (Closes #152).