@@ -16,6 +16,7 @@ Version 5.1.0 - DEV
  - Fix various small bugs in problem ZIP import
  - [security] Disable GCC family automatic language detection to
    prevent submitting other languages or object/executable code.
+ - Write compare script errors to logfile. (Closes #179).
  - Various smaller fixes and improvements to the jury interface.
 
 Version 5.0.0 - 11 August 2015
